<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="next"
            type="org.cazait.cazait_android.ui.view.login.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige"
        tools:context=".view.MainActivity">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="282dp"
            android:text="@string/login_login"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

        <EditText
            android:id="@+id/et_login_user_name"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_white_rectangle"
            android:hint="@string/login_username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="17dp"
            android:paddingTop="18dp"
            android:paddingRight="17dp"
            android:paddingBottom="18dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/darkgray"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_register" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/round_white_rectangle"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="17dp"
            android:paddingTop="18dp"
            android:paddingRight="17dp"
            android:paddingBottom="18dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/darkgray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_user_name" />

        <TextView
            android:id="@+id/tv_login_find_id"
            android:layout_width="70dp"
            android:layout_height="17dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="17dp"
            android:text="@string/login_id_find"
            android:textColor="@color/brown"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login_find_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />


        <TextView
            android:id="@+id/tv_login_find_password"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login_password_find"
            android:textColor="@color/brown"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_login_signup"
            app:layout_constraintHorizontal_bias="0.608"
            app:layout_constraintStart_toEndOf="@+id/tv_login_find_id"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="68dp"
            android:text="@string/login_signup"
            android:textColor="@color/brown"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login_find_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_login_find_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <TextView
            android:id="@+id/tv_login_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:background="@drawable/round_wood_rectangle"
            android:paddingLeft="78dp"
            android:paddingTop="11dp"
            android:paddingRight="78dp"
            android:paddingBottom="11dp"
            android:text="@string/login_login_doing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_find_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
