<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="111dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgv_cafe_menu"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginStart="15.22dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/americano"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cafe_menu"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="15.45dp"
            android:layout_marginTop="23dp"
            android:text="@string/cafe_info_menu_ame"
            android:textColor="@color/cazait_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgv_cafe_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cafe_menu_price"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/cafe_info_price1"
            android:textColor="@color/cafe_price"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/tv_cafe_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="191.54dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cafe_info_menu_info"
            android:textColor="@color/cazait_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_cafe_menu"
            app:layout_constraintTop_toBottomOf="@+id/tv_cafe_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>