<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_cafe_info_color"
        tools:context=".ui.view.cafelist.info.inner.CafeRatingReviewEdit">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/review_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rating_review_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/imgbtn_review_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:background="@color/rating_review_edit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reivew_edit_toolbar_title"
                android:textColor="@color/cazait_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_star_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_edit_star_request"
            android:textSize="15sp"
            android:textColor="@color/cazait_black"
            android:layout_marginTop="38dp"
            android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/review_edit_toolbar"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imgv_star_press1"
            android:layout_width="46.67dp"
            android:layout_height="44.33dp"
            android:src="@drawable/cafe_info_rating_review_edit_star_empty"
            android:background="@color/base_cafe_info_color"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40.67dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_star_request"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/imgv_star_press2"
            android:layout_width="46.67dp"
            android:layout_height="44.33dp"
            android:src="@drawable/cafe_info_rating_review_edit_star_empty"
            android:background="@color/base_cafe_info_color"
            android:layout_marginTop="8dp"
            android:layout_marginStart="7.33dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_star_request"
            app:layout_constraintStart_toEndOf="@+id/imgv_star_press1"/>
        <ImageView
            android:id="@+id/imgv_star_press3"
            android:layout_width="46.67dp"
            android:layout_height="44.33dp"
            android:src="@drawable/cafe_info_rating_review_edit_star_empty"
            android:background="@color/base_cafe_info_color"
            android:layout_marginTop="8dp"
            android:layout_marginStart="7.33dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_star_request"
            app:layout_constraintStart_toEndOf="@+id/imgv_star_press2"/>
        <ImageView
            android:id="@+id/imgv_star_press4"
            android:layout_width="46.67dp"
            android:layout_height="44.33dp"
            android:src="@drawable/cafe_info_rating_review_edit_star_empty"
            android:background="@color/base_cafe_info_color"
            android:layout_marginTop="8dp"
            android:layout_marginStart="7.33dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_star_request"
            app:layout_constraintStart_toEndOf="@+id/imgv_star_press3"/>
        <ImageView
            android:id="@+id/imgv_star_press5"
            android:layout_width="46.67dp"
            android:layout_height="44.33dp"
            android:src="@drawable/cafe_info_rating_review_edit_star_empty"
            android:background="@color/base_cafe_info_color"
            android:layout_marginTop="8dp"
            android:layout_marginStart="7.33dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_star_request"
            app:layout_constraintStart_toEndOf="@+id/imgv_star_press4"/>

        <TextView
            android:id="@+id/tv_review_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_edit_text_request"
            android:textColor="@color/cazait_black"
            android:layout_marginTop="33dp"
            android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/imgv_star_press3"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_review_edit"
            android:layout_width="0dp"
            android:layout_height="163dp"
            android:hint="@string/review_edit_hint"
            android:maxLength="50"
            android:scrollbars="vertical"
            android:gravity="top"
            android:paddingTop="15dp"
            android:paddingStart="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="27dp"
            android:background="@drawable/review_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_review_request"/>

        <Button
            android:id="@+id/btn_review_ok"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:text="@string/review_edit_ok"
            android:textSize="20sp"
            android:textColor="@color/cazait_white"
            android:background="@drawable/review_btn_outline"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@id/et_review_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>