<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="111dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/outline"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/review_star_1"
            android:layout_width="25.62dp"
            android:layout_height="25.62dp"
            android:src="@drawable/cafe_info_rating_review_star_empty"
            android:layout_marginTop="11dp"
            android:layout_marginStart="15.81dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/review_star_2"
            android:layout_width="25.62dp"
            android:layout_height="25.62dp"
            android:src="@drawable/cafe_info_rating_review_star_empty"
            android:layout_marginTop="11dp"
            android:layout_marginStart="2.27dp"
            app:layout_constraintStart_toEndOf="@+id/review_star_1"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/review_star_3"
            android:layout_width="25.62dp"
            android:layout_height="25.62dp"
            android:src="@drawable/cafe_info_rating_review_star_empty"
            android:layout_marginTop="11dp"
            android:layout_marginStart="2.27dp"
            app:layout_constraintStart_toEndOf="@+id/review_star_2"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/review_star_4"
            android:layout_width="25.62dp"
            android:layout_height="25.62dp"
            android:src="@drawable/cafe_info_rating_review_star_empty"
            android:layout_marginTop="11dp"
            android:layout_marginStart="2.27dp"
            app:layout_constraintStart_toEndOf="@+id/review_star_3"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/review_star_5"
            android:layout_width="25.62dp"
            android:layout_height="25.62dp"
            android:src="@drawable/cafe_info_rating_review_star_empty"
            android:layout_marginTop="11dp"
            android:layout_marginStart="2.27dp"
            app:layout_constraintStart_toEndOf="@+id/review_star_4"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe_info_review_town"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="@color/cazait_black"
            android:layout_marginStart="18.45dp"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe_info_review_nickname"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="@color/cazait_black"
            android:layout_marginTop="41dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_town"/>
        <TextView
            android:id="@+id/tv_devide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="@color/cazait_black"
            android:layout_marginTop="41dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_nickname"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe_info_review_time"
            android:textSize="11sp"
            android:textStyle="bold"
            android:textColor="@color/cazait_black"
            android:layout_marginTop="41dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_devide"/>

        <TextView
            android:id="@+id/tv_main_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe_info_review_main"
            android:textSize="13sp"
            android:textColor="@color/cazait_black"
            android:layout_marginTop="70dp"
            android:layout_marginStart="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>